@@ -3,6 +3,7 @@ package com.example.real_estate_app_account.service;
 import com.example.real_estate_app_account.dto.RoomRequest;
 import com.example.real_estate_app_account.dto.RoomResponse;
 import com.example.real_estate_app_account.exception.*;
+import com.example.real_estate_app_account.mapper.RoomMapper;
 import com.example.real_estate_app_account.model.*;
 import com.example.real_estate_app_account.repository.*;
 import lombok.RequiredArgsConstructor;
@@ -10,7 +11,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,6 +23,7 @@ public class RoomService {
     private final FloorRepository floorRepository;
     private final EntranceRepository entranceRepository;
     private final BuildingRepository buildingRepository;
+    private final RoomMapper roomMapper;
 
     public RoomResponse createRoom(RoomRequest request) {
         log.info("Создание комнаты: {}", request.getName());
@@ -31,7 +32,7 @@ public class RoomService {
             .orElseThrow(() -> new ApartmentNotFoundException("Квартира с ID " + request.getApartmentId() + " не найдена"));
 
         Corridor corridor = corridorRepository.findById(request.getCorridorId())
-                .orElseThrow(() -> new CorridorNotFoundException("Коридор с ID " + request.getCorridorId() + " не найден"));
+            .orElseThrow(() -> new CorridorNotFoundException("Коридор с ID " + request.getCorridorId() + " не найден"));
 
         Floor floor = floorRepository.findById(request.getFloorId())
             .orElseThrow(() -> new FloorNotFoundException("Этаж с ID " + request.getFloorId() + " не найден"));
@@ -42,9 +43,7 @@ public class RoomService {
         Building building = buildingRepository.findById(request.getBuildingId())
             .orElseThrow(() -> new BuildingNotFoundException("Здание с ID " + request.getBuildingId() + " не найдено"));
 
-        Room room = new Room();
-        room.setName(request.getName());
-        room.setArea(request.getArea());
+        Room room = roomMapper.toEntity(request);
         room.setApartment(apartment);
         room.setCorridor(corridor);
         room.setFloor(floor);
@@ -53,16 +52,15 @@ public class RoomService {
 
         Room savedRoom = roomRepository.save(room);
         log.info("Комната с ID {} успешно создана", savedRoom.getId());
-        return mapToResponse(savedRoom);
+        return roomMapper.toResponse(savedRoom);
     }
 
     public List<RoomResponse> getAllRooms() {
         log.info("Получение списка всех комнат");
-
         return roomRepository.findAll()
             .stream()
-            .map(this::mapToResponse)
-            .collect(Collectors.toList());
+            .map(roomMapper::toResponse)
+            .toList();
     }
 
     public RoomResponse getRoomById(Long id) {
@@ -71,7 +69,7 @@ public class RoomService {
         Room room = roomRepository.findById(id)
             .orElseThrow(() -> new RuntimeException("Комната с ID " + id + " не найдена"));
 
-        return mapToResponse(room);
+        return roomMapper.toResponse(room);
     }
 
     public RoomResponse updateRoom(Long id, RoomRequest request) {
@@ -105,25 +103,12 @@ public class RoomService {
 
         Room updatedRoom = roomRepository.save(room);
         log.info("Комната с ID {} успешно обновлена", updatedRoom.getId());
-        return mapToResponse(updatedRoom);
+        return roomMapper.toResponse(updatedRoom);
     }
 
     public void deleteRoom(Long id) {
         log.info("Удаление комнаты с ID {}", id);
         roomRepository.deleteById(id);
         log.info("Комната с ID {} успешно удалена", id);
-    }
-
-    private RoomResponse mapToResponse(Room room) {
-        RoomResponse response = new RoomResponse();
-        response.setId(room.getId());
-        response.setName(room.getName());
-        response.setArea(room.getArea());
-        response.setApartmentId(room.getApartment().getId());
-        response.setCorridorId(room.getCorridor().getId());
-        response.setFloorId(room.getFloor().getId());
-        response.setEntranceId(room.getEntrance().getId());
-        response.setBuildingId(room.getBuilding().getId());
-        return response;
     }
 }
